--- a/Assigment/[Week 5] 1 Tables with pseudo classes/style.css
+++ b/Assigment/[Week 5] 1 Tables with pseudo classes/style.css
@@ -1,15 +1,20 @@
   th:nth-child(1),th:nth-child(2),th:nth-child(3),th:nth-child(4){
-    font-size: 50px;
+    font-size: 70px;
         }
   tr:nth-child(even){
     background-color: rgb(110, 101, 102);
-    font-size: 30px;
+    font-size: 35px;
     color: rgb(255,255,255);
+    
   }
   
   tr:nth-child(odd){
     background-color: rgb(173, 47, 68);
-    font-size: 30px;
+    font-size: 35px;
     color: rgb(255,255,255);
+    
   }
 
+ table{
+  border-collapse: collapse;
+ }
