--- a/Assigment/[Week 5] 2.Pseudo Puzzle/style.css
+++ b/Assigment/[Week 5] 2.Pseudo Puzzle/style.css
@@ -2,25 +2,26 @@ h1{
  background-color: rgb(176, 176, 205);
  color: rgb(28, 1, 53);
 }
+
 h1:hover{
     background-color: rgb(215, 9, 9);
     color: #ffffff;  
 }
-h1::first-letter{
-    font-size: 50px;
+h1:hover::first-letter{
+    font-size: 150px;
 }
 
 p{
     background-color: #bd737f;
-    color: #000000;
-    font-size: 20px;    
+    color: #000000;  
 }
 
 p:hover{
-    background-color: #000000;
+   
+    background-color: #8d0c0c;
     color: #ffffff;
 }
 
-p::first-letter{
-    font-size: 50px;
+p:hover::first-letter{
+    font-size: 200px;
 }
