--- a/Assigment/[Week 5] 5.CSS Units/style.css
+++ b/Assigment/[Week 5] 5.CSS Units/style.css
@@ -19,23 +19,13 @@ p{
     font-size: 1em;
 }
 
-.box-1{
+section:nth-child(even){
     background-color: rgb(98, 21, 34);
     color: rgb(248, 247, 247);   
 }
 
-.box-2{
-    background-color: rgb(232, 173, 183);
-    color: rgb(51, 5, 5);
-    
-}
+section:nth-child(odd){
 
-.box-3{
-    background-color: rgb(98, 21, 34);
-    color: rgb(248, 247, 247);
-}
-
-.box-4{
     background-color: rgb(232, 173, 183);
     color: rgb(51, 5, 5);
 }
