--- a/Assigment/[Week 5] 4 Box Properties/style.css
+++ b/Assigment/[Week 5] 4 Box Properties/style.css
@@ -11,11 +11,17 @@ article{
     border: 3px solid #000000;
     float: left; 
     margin: 5px 10px 5px 5px;
+   
 
+}
+
+img{
+    width: 300px;
 }
 
 #img-ny:hover{
     border:5px dotted #ff0000;
     padding: 15px 15px 15px 10px;
     cursor: pointer; 
+   width: 310px;
 }
