--- a/Assigment/[Week 5] 7.Position Experiments/style.css
+++ b/Assigment/[Week 5] 7.Position Experiments/style.css
@@ -4,6 +4,7 @@
 }
 
 .box-1{
+    position: relative;
     width: 50%;
     margin: 10px 10px 50px 10px ;
     box-shadow: 10px 10px 10px 10px lightgrey;
@@ -20,9 +21,13 @@ p{
 
 .x-1{
     position:absolute;
-    right: 10px;
+    top: -10px;
+    right: -7px;
     background-color: red;
+    color: white;
+    text-align: center;
     border-radius: 50%;
+    width: 20px;
 
 }
 video{
