--- a/Project/[Week 3] Final Project/style.css
+++ b/Project/[Week 3] Final Project/style.css
@@ -11,34 +11,43 @@ body{
 header{
     font-size: 2em;
     position: relative;
-    left: 370px;
+    left: 500px;
 }
 
-li a{
-    display:inline;
-    background-color: rgb(51, 96, 96);
-    color: white;
-    position: relative;
-    left: 350px;
-    border-radius: 10%;
+.ul-1 {
     text-decoration: none;
     font-size: 1.5em;
+    width: 50%;
+    margin: 10px;
+}
+
+.list-1{
+    display: inline-block;
+    list-style-type: none;
+    margin-inline:20px;
+    background-color: rgb(3, 194, 194);
+    color: rgb(255, 255, 255);
+    border-radius: 10%;
+    position: relative;
+    left: 500px;
 }
 
 hr{
     width: 55%;
     border: 1px solid rgb(0, 0, 0);
     position: relative;
-    left: 210px;
+    left: 250px;
 }
 
 #html{
     background-color: rgb(218, 255, 163);
     color: rgb(0, 0, 0);
-    margin: 10px 100px 10px 200px;
+    margin: 10px 200px 10px 200px;
     padding: 25px;
-    width: 1000px;
+    width: 1050px;
     border-radius: 5%;  
+    position:relative;
+    left: 50px;
     
 }
 
@@ -49,23 +58,28 @@ img,h2{
 .section-1{
     background-color: rgba(230, 179, 85,0.8);
     color: rgb(0, 0, 0);
-    margin: 10px 100px 10px 200px;
+    margin: 10px 200px 10px 200px;
     padding: 25px;
-    width: 1000px;
+    width: 1050px;
     border-radius: 5%;  
+    position:relative;
+    left: 50px;
 }
  .list-education1{
     background-color: white;
     color: rgb(111, 30, 0);
     border-radius: 10%;
+    list-style-type: none;
     padding: 10px;
-    margin:10px;
- }
+    margin: 10px;
+}
+
 
  .list-education2{
     background-color: white;
     color: rgb(111, 30, 0);
     border-radius: 10%;
+    list-style-type: none;
     padding: 10px;
     margin: 10px;
  }
@@ -73,6 +87,7 @@ img,h2{
     background-color: white;
     color: rgb(111, 30, 0);
     border-radius: 10%;
+    list-style-type: none;
     padding: 10px;
     margin: 10px;
  }
