--- a/Assigment/[Week 6} 2.Centering a div/style.css
+++ b/Assigment/[Week 6} 2.Centering a div/style.css
@@ -1,12 +1,13 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ 
 }
 
 header{
     background-color: rgb(235, 235, 173);
-    width: 50%;
+    width: 500px;
     display: flex;
     justify-content: center;
     
@@ -15,7 +16,7 @@ header{
 .container{
     margin: 2em;
     border: 2px solid black;
-    width: 50%;
+    padding: 1rem;
     background-color: white;
     display: flex;
     flex-direction: column;
