--- a/Assigment/[Week] 3.Card/style.css
+++ b/Assigment/[Week] 3.Card/style.css
@@ -8,7 +8,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgba(92, 92, 58, 0.129);
     border: 2px solid black;
-    width: 20%;
+    width: 250px;
     box-shadow: 8px 8px 6px 6px rgb(116, 113, 113);
     display: flex;
     flex-direction: column;
@@ -22,35 +22,38 @@
 
 
 .card-left{
+    width: 50%;
     border: 1px solid black;
     padding: 1.8em;
     font-size: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .card-right{
+    width: 50%;
     border: 1px solid black;
     padding: 1.5em;
     font-size: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content:center;
 }
 
 img{
-    position:relative;
     display: flex;
     justify-content:flex-start;
     align-content: end;
-    max-width: 100%;
+    width: 100%;
     
 }
 
 .copyright{
-    position: fixed;
+    position: absolute;
     top: 100px;
+    left: auto;
     color: white;
     font-size: 0.5em;
 }
