--- a/Assigment/[Week 7] Flex Blogposts/style.css
+++ b/Assigment/[Week 7] Flex Blogposts/style.css
@@ -37,19 +37,25 @@ body {
 
 }
 .CSS{
+    font-size: 0.8em;
     background-color: rgb(23, 179, 23);
     color: white;
+    text-align: center;
     padding:0.5px 5px 0.5px 5px;
 }
 .HTML{
+    font-size: 0.8em;
     background-color: rgb(36, 68, 185);
     color: white;
+    text-align: center;
     padding:0.5px 5px 0.5px 5px;
 
 }
 .JAVASCRIPT{
+    font-size: 0.8em;
     background-color: rgb(245, 8, 8);
     color: white;
+    text-align: center;
     padding:0.5px 5px 0.5px 5px;
 }
 .post{
