--- a/Assigment/[Week 8] 4.Grid Blogposts/style.css
+++ b/Assigment/[Week 8] 4.Grid Blogposts/style.css
@@ -1,36 +1,30 @@
-body {
-    margin: 2rem;
-    padding: 0;
-    box-sizing: border-box;
+
+.blogposts{
+    display: grid;
+    grid-template-rows: repeat(2 , auto);
+    grid-template-columns: repeat(2,auto);
+    column-gap: 1em;
 }
-
-.blogposts {
-    width: 600px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 2em 1em 2em 1em;
-    display: flex;
-    gap: 2em;
-
-}
-
-.simple-blog {
-    background-color: rgb(46, 46, 75);
-    color: white;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 30px;
+.simple-blog{
+    grid-column: auto ;
+    grid-row: 1 / 3 ; 
+    background-color: rgb(42, 42, 127);
+    color: black;
     direction: rtl;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
 }
 
-.right-posts {
-    display: flex;
-    flex-direction: column;
-    gap: 4em;
-    
+.right-posts{
+    grid-column: auto;
+    grid-row: 1 / 2;
 }
+.left-posts{
+    grid-column: auto;
+    grid-row: 2 / 3;
+}
+
 .pinned-post {
     margin: 0;
     color: rgb(147, 146, 146);
