--- a/Assigment/[Week 8] 4.Grid Blogposts/style.css
+++ b/Assigment/[Week 8] 4.Grid Blogposts/style.css
@@ -11,14 +11,16 @@
     background-color: rgb(42, 42, 127);
     color: black;
     direction: rtl;
-    justify-content: center;
-    align-items: center;
     padding: 2em;
+    
 }
+
 
 .right-posts{
     grid-column: auto;
     grid-row: 1 / 2;
+    padding-right: 3rem;
+    gap:2rem ;
 }
 .left-posts{
     grid-column: auto;
