--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+   box-sizing: border-box; 
    
 }
 body{
@@ -8,8 +9,10 @@ body{
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr auto;
     background-color: rgb(222, 224, 216);
+    font-family: 'Roboto',sans-serif;
+    
 }
-.content{
+.aside{
     display: flex;
 }
 .cool-page{
@@ -17,6 +20,7 @@ body{
     justify-content: center;
     font-size: 1.3rem;
     gap: 2rem;
+    margin-top: 1rem;
     margin-bottom: 5px;
 }
 .profilephoto{
@@ -39,7 +43,7 @@ body{
     background-color: rgba(0, 0, 0, 0.863);
     color: white;
     background-blend-mode: color;  
-    height:100vh;
+    overflow-y: scroll;
     padding: 20px;
 }
 ul{
@@ -55,9 +59,9 @@ ul li a {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    gap: 10px;
+    gap: 0.5rem;
     transition: 0.5s;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 .reddashboard{
     pointer-events: none;
@@ -75,19 +79,80 @@ ul li a:hover{
 header{
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-    margin: 20px;
+    align-items: end;
+    margin-top: 0.5rem;
 }
-
+.header-dashboard{
+    display: flex;
+    align-items: flex-end;
+}
+.search-bar-icon{
+    display: flex;
+    align-items: flex-end;
+    gap: 1.2rem;
+}
 .left-header{
     display: flex;
     gap: 0.5rem;
-    font-size: 1.5rem;
-}
-#icon{
-    padding-inline: 0.5rem
+    font-size: 1.4rem;
 }
 
+.right-header{
+    display: flex;
+    align-items: flex-end;
+    gap: 1rem;
+    font-size: 1.5rem;
+}
+.right-icon{
+    display: flex;
+    position: relative;
+}
+.icon{
+    padding-inline: 1rem;
+    font-size: 1.8rem;
+}
+
+.notification{
+    position: relative;
+    cursor: pointer;
+
+}
+.person{
+    cursor: pointer;
+}
+.dashboard{
+    cursor: pointer;
+}
+.numberofnotification{
+    position:absolute;
+    top: -5px;
+    right: 10px;
+    background-color: red;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    width: 20px;
+    font-size: 0.9rem;
+}
+
+.more-vert{
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s linear;
+}
+
+.more-vert:hover{
+    box-shadow:0 0 15px rgb(111, 108, 108);
+}
+    
 .search-bar-input{
    outline: none;
    border: none;
@@ -98,4 +163,274 @@ header{
 
    .search-bar-input:hover{
     border-bottom: 2px solid rgb(161, 25, 161);
+    transition: all 0.4s linear;
    }
+   .dropdownmenu{
+    display: block; 
+    opacity: 0;
+    position: absolute;
+    margin-left: -10rem;
+    margin-top: -1rem;
+    background-color: rgb(250, 250, 250);
+    color: rgb(7, 6, 6);
+    font-size: 0.8rem;
+    transition: all 0.2s linear;
+
+   }
+   .dropdownmenu:hover{
+    opacity: 1;
+    position: absolute;
+   }
+  .dropdown{
+    background-color: rgb(252, 239, 239);
+    color: rgb(5, 5, 5);
+    margin: 0.5rem;
+    padding: 0.5rem;
+    transition: all 0.5s linear;
+  }
+  .dropdown:hover{
+    background-color: rgb(245, 1, 1);
+    color: rgb(254, 254, 254);
+    margin: 0.5rem;
+    padding: 0.5rem;
+    
+  }
+  main{
+    margin-bottom: 2rem;
+  }
+  .right-content{
+    margin: 2rem;
+  }
+  .global{
+    background-color: white;
+    margin-top: 5rem;
+    border-radius: 0.5rem;
+   
+  }
+
+  .global-icon-p{
+    display: flex;
+    align-items: flex-end;
+    gap: 2rem;
+    font-size: 1.3rem;
+    margin: 2rem;
+    padding-top: 2rem;
+  }
+  .language{
+    cursor: pointer;
+    background-color: rgb(53, 159, 53);
+    color: white;
+    width: 5rem;
+    height: 5rem;
+    margin-top: -5rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ .table{
+    border-collapse: collapse;
+    margin: 2rem;
+    width: 20rem;
+ }
+table td{
+    border-bottom: 2px solid black;
+}
+.frameandtable{
+    display: flex;
+}
+.iframe{
+    margin: 2rem;
+    width: 100%;
+    height: auto;
+}
+
+.ratings{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin-top: 5rem;
+}
+
+.bookingcontent{
+    background-color: white;
+    gap: 2rem;
+    font-size: 1.3rem;  
+    border-radius: 0.5rem;
+   
+}
+.bookings{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.morespace{
+ display: flex;
+ align-items: end;
+  font-size: 0.9rem;
+  color: rgb(133, 126, 126);
+  margin: 1rem;
+}
+.bookingicon{
+    cursor: pointer;
+    background-color: rgb(240, 157, 5);
+    color: white;
+    width: 5rem;
+    height: 5rem;
+    margin-left: 2rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rating-booking{
+    font-size: 0.9rem;
+    color: rgb(105, 101, 101);
+    padding: 1rem;  
+}
+
+.rating-184{
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+.bar_chart{
+    cursor: pointer;
+    background-color: rgb(240, 5, 5);
+    color: white;
+    width: 5rem;
+    height: 5rem;
+    margin-left: 2rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.collectionsbookmark{
+    cursor: pointer;
+    background-color: rgb(53, 159, 53);
+    color: white;
+    width: 5rem;
+    height: 5rem;
+    margin-left: 2rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.public{
+    cursor: pointer;
+    background-color: rgb(39, 89, 183);
+    color: white;
+    width: 5rem;
+    height: 5rem;
+    margin-left: 2rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
+
+
+.listchapter{
+    font-size: 1.5rem;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+}
+.managelisting{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;  
+}
+
+.managelistcontent{
+    margin-top: 1rem;
+    background-color: white;
+    border-radius: 0.5rem;
+   
+}
+
+.contentimages img{
+ padding-left: 3rem;
+ padding-right: 3rem;
+ margin-top: -1.5rem;
+ cursor: pointer;
+}
+
+.manageicons{
+    display: flex;
+    justify-content: center;
+    margin-top: -1.6rem;
+    visibility: hidden;
+    cursor: pointer;
+    gap: 1rem;
+}
+
+.contentimages img:hover { 
+  transform: translateY(-2rem);
+  transition: all 0.8s linear;
+  border-radius:1rem;
+}
+img:hover + .manageicons{
+    visibility: visible;
+}
+.cart-1-p{
+    text-align: center;
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+.cart-1-p2{
+    text-align: center;
+    padding: 1rem;
+    font-size: 0.8rem;
+    color: rgb(105, 101, 101);
+}
+.cart1footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0.5rem;
+}
+.locationcart1{
+    font-size: 0.9rem;
+    color:rgb(105, 101, 101) ;
+}
+.edit{
+    color: green;
+}
+.close{
+    color: red;
+}
+.footer{
+    margin-top: 5rem;
+    background-color: white;
+}
+.footercontent{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+.footerlist a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-inline: 0.8rem;
+    color: black;
+}
+
