--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -10,7 +10,8 @@ body{
     grid-template-rows: auto 1fr auto;
     background-color: rgb(222, 224, 216);
     font-family: 'Roboto',sans-serif;
-    
+    width: 100%;
+    height: 100vh;
 }
 .aside{
     display: flex;
@@ -45,6 +46,7 @@ body{
     background-blend-mode: color;  
     overflow-y: scroll;
     padding: 20px;
+
 }
 ul{
     list-style: none;
@@ -200,6 +202,7 @@ header{
   }
   .right-content{
     margin: 2rem;
+    overflow-y: scroll;
   }
   .global{
     background-color: white;
@@ -367,10 +370,11 @@ table td{
 }
 
 .contentimages img{
- padding-left: 3rem;
- padding-right: 3rem;
- margin-top: -1.5rem;
+ padding-left: 2rem;
+ padding-right: 2rem;
+ margin-top: -1rem;
  cursor: pointer;
+ width: 100%;
 }
 
 .manageicons{
