--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -10,7 +10,6 @@ body{
     grid-template-rows: auto 1fr auto;
     background-color: rgb(222, 224, 216);
     font-family: 'Roboto',sans-serif;
-    width: 100%;
     height: 100vh;
 }
 .aside{
@@ -202,6 +201,8 @@ header{
   }
   .right-content{
     margin: 2rem;
+    padding-right: 2rem;
+    overflow-y: scroll;
   
   }
   .global{
