--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -10,6 +10,7 @@ body{
     background-color: rgb(222, 224, 216);
     font-family: 'Roboto',sans-serif;
     height: 100vh;
+    font-weight: 100;
 }
 .aside{
     display: flex;
@@ -78,16 +79,16 @@ ul li a:hover{
 header{
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
     
 }
 .header-dashboard{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 }
 .search-bar-icon{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     gap: 1.2rem;
 }
 .left-header{
@@ -98,7 +99,7 @@ header{
 
 .right-header{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     gap: 1rem;
     font-size: 1.5rem;
 }
@@ -237,7 +238,7 @@ header{
     width: 20rem;
  }
 table td{
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
 }
 .frameandtable{
     display: flex;
@@ -281,7 +282,7 @@ table td{
 
 .morespace{
  display: flex;
- align-items: end;
+ align-items: center;
   font-size: 0.9rem;
   color: rgb(133, 126, 126);
   margin: 1rem;
