--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -161,7 +161,7 @@ header{
    font-size: 1.2rem;
    }
 
-   .search-bar-input:hover{
+   .search-bar-input:focus{
     border-bottom: 2px solid rgb(161, 25, 161);
     transition: all 0.4s linear;
    }
