--- a/Project/CSS Final Project/style.css
+++ b/Project/CSS Final Project/style.css
@@ -62,14 +62,11 @@ ul li a {
     gap: 0.5rem;
     transition: 0.5s;
     font-size: 1rem;
+    align-items: center;
 }
-.reddashboard{
-    pointer-events: none;
-    padding: 0px;
-    margin: 10px 0;
+.active{
     background-color: red;
-    display: flex;
-    justify-content: start;
+    border-radius: 8px;
 }
 ul li a:hover{
     background-color: rgba(119, 113, 113, 0.577);
@@ -97,43 +94,7 @@ header{
     font-size: 1.4rem;
 }
 
-.right-header{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    font-size: 1.5rem;
-}
-.right-icon{
-    display: flex;
-    position: relative;
-}
-.icon{
-    padding-inline: 1rem;
-    font-size: 1.8rem;
-}
 
-.notification{
-    position: relative;
-    cursor: pointer;
-
-}
-.person{
-    cursor: pointer;
-}
-.dashboard{
-    cursor: pointer;
-}
-.numberofnotification{
-    position:absolute;
-    top: -5px;
-    right: 10px;
-    background-color: red;
-    color: white;
-    text-align: center;
-    border-radius: 50%;
-    width: 20px;
-    font-size: 0.9rem;
-}
 
 .more-vert{
     cursor: pointer;
@@ -165,21 +126,57 @@ header{
     border-bottom: 2px solid rgb(161, 25, 161);
     transition: all 0.4s linear;
    }
+
+
+.right-header{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.5rem;
+}
+.right-icon ul {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    gap: 1rem;
+    color: rgb(43, 42, 42);
+    align-items: center;
+}
+
+ ul li{
+    display: block;
+    cursor: pointer;
+    text-align: center;
+}
+.numberofnotification{
+    position:absolute;
+    top: -5px;
+    right:4rem;
+    background-color: red;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    width: 18px;
+    font-size: 0.9rem;
+}
    .dropdownmenu{
     display: block; 
     opacity: 0;
+    visibility: hidden;
     position: absolute;
     margin-left: -10rem;
-    margin-top: -1rem;
+    margin-top: -0.7rem;
     background-color: rgb(250, 250, 250);
     color: rgb(7, 6, 6);
     font-size: 0.8rem;
-    transition: all 0.2s linear;
+    transition: all 0.2s 0.3s linear;
 
    }
-   .dropdownmenu:hover{
-    opacity: 1;
+   #notification:hover .dropdownmenu{
+    opacity: 1; 
     position: absolute;
+    visibility: visible;
    }
   .dropdown{
     background-color: rgb(252, 239, 239);
@@ -193,8 +190,43 @@ header{
     color: rgb(254, 254, 254);
     margin: 0.5rem;
     padding: 0.5rem;
-    
   }
+  .dashboardopacity{
+    background-color: rgb(33, 32, 32);
+    color: white;
+    font-size: 0.7rem;
+    padding: 0.1rem;
+    transition: all 0.5s 0.5s linear;
+    opacity: 0;
+  }
+  #dashboard-opacity:hover .dashboardopacity{
+    opacity: 1;
+  }
+  .notificationopacity{
+    background-color: rgb(33, 32, 32);
+    color: white;
+    padding: 0.1rem;
+    font-size: 0.7rem;
+    transition: all 0.5s 0.5s linear;
+    opacity: 0;
+  }
+ #notification:hover .notificationopacity{
+    opacity: 1;
+ }
+ .personopacity{
+    box-sizing: border-box;
+    background-color: rgb(33, 32, 32);
+    color: white;
+    font-size: 0.7rem;
+    padding-left: 0.1rem;
+    padding-right: 0.1rem;
+    transition: all 0.5s 0.5s linear;
+    opacity: 0;
+ }
+ #person-opacity:hover .personopacity{
+    opacity: 1;
+ }
+
   main{
     margin-bottom: 2rem;
   }
@@ -407,6 +439,7 @@ table tr:last-child{
 .close{
     cursor: pointer;
 }
+
 
 .contentimages img:hover { 
   transform: translateY(-2rem);
